Access token auth for swagger fix
