# App/task.go
@@ -25,16 +25,17 @@ type SetStatus struct {
 
 // Create Task endpoint for Todo
 // Create Task By ListId godoc
-// @BasePath /api/v1
-// @Summary Create Task
-// @Schemes
-// @Description Sign-In with user credentials, for generated access token
-// @Accept json
-// @Produce json
-// @Param id path int true "listid"
-// @Param   Request body SaveTask true "Add Task"
-// @Success 200 {object} ResponseJson "Success"
-// @Router /CreateTask/{listid} [post]
+//
+//	@BasePath	/api/v1
+//	@Summary	Create Task
+//	@Description	Sign-In with user credentials, for generated access token
+//	@Accept			json
+//	@Produce		json
+//	@Security		BearerAuth
+//	@Param			listid		path		int				true	"List ID"
+//	@Param			Request	body		SaveTask		true	"Add Task"
+//	@Success		200		{object}	ResponseJson	"Success"
+//	@Router			/CreateTask/{listid} [post]
 func AddTaskToList(c *gin.Context) {
 	var req SaveTask
 
@@ -72,15 +73,17 @@ func AddTaskToList(c *gin.Context) {
 }
 
 // Delete Task For User endpoint for Todo godoc
-// @BasePath /api/v1
-// @Summary Delete Task
-// @Schemes
-// @Description Sign-In with user credentials, for generated access token
-// @Accept json
-// @Produce json
-// @Param id path int true "id"
-// @Success 200 {object} ResponseJson "Success"
-// @Router /DeleteTask/{id} [delete]
+//
+//	@BasePath	/api/v1
+//	@Summary	Delete Task
+//	@Schemes
+//	@Description	Sign-In with user credentials, for generated access token
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path		int				true	"id"
+//	@Success		200	{object}	ResponseJson	"Success"
+//	@Security		BearerAuth
+//	@Router			/DeleteTask/{id} [delete]
 func DeleteTask(c *gin.Context) {
 	idParam := c.Param("id")
 	id, err := strconv.Atoi(idParam)
@@ -108,16 +111,18 @@ func DeleteTask(c *gin.Context) {
 }
 
 // Update Task For User endpoint for Todo godoc
-// @BasePath /api/v1
-// @Summary Update Task
-// @Schemes
-// @Description Sign-In with user credentials, for generated access token
-// @Accept json
-// @Produce json
-// @Param id path int true "id"
-// @Param   Request body SaveTask true "Update Task"
-// @Success 200 {object} ResponseJson "Success"
-// @Router /UpdateTask/{id} [put]
+//
+//	@BasePath	/api/v1
+//	@Summary	Update Task
+//	@Schemes
+//	@Description				Sign-In with user credentials, for generated access token
+//	@Accept						json
+//	@Produce					json
+//	@Security					BearerAuth
+//	@Param						id		path		int				true	"id"
+//	@Param						Request	body		SaveTask		true	"Update Task"
+//	@Success					200		{object}	ResponseJson	"Success"
+//	@Router						/UpdateTask/{id} [put]
 func UpdateTask(c *gin.Context) {
 	var req SaveTask
 
@@ -167,16 +172,19 @@ func UpdateTask(c *gin.Context) {
 }
 
 // Change Task Status endpoint for Todo godoc
-// @BasePath /api/v1
-// @Summary Change Status Task
-// @Schemes
-// @Description Sign-In with user credentials, for generated access token
-// @Accept json
-// @Produce json
-// @Param id path int true "id"
-// @Param   Request body SetStatus true "Change Status"
-// @Success 200 {object} ResponseJson "Success"
-// @Router /TaskCompleted/{id} [put]
+//
+//	@BasePath	/api/v1
+//	@Summary	Change Status Task
+//	@Schemes
+//	@Description				Sign-In with user credentials, for generated access token
+//	@Accept						json
+//	@Produce					json
+//	@Security					BearerAuth
+//	@Security					BearerAuth
+//	@Param						id		path		int				true	"id"
+//	@Param						Request	body		SetStatus		true	"Change Status"
+//	@Success					200		{object}	ResponseJson	"Success"
+//	@Router						/TaskCompleted/{id} [put]
 func ChangeStatus(c *gin.Context) {
 	var req SetStatus
 
